tests/NormalTests/paczka1/fuzzy1/78605809.err
Error in line 1: A871 S359 15,4
Error in line 8: A871 A871 22,2
Error in line 10: 9M3b S359 15,7
Error in line 11: 9M3b A763 59,9
Error in line 19: S5l5GHa S820 22,7
Error in line 14: 9M3b A871 5,5
